styles.css
/* Globals */
html {
  scroll-behavior: smooth;
}

body {
  color: #0B0A08;
  background-color: #FFFFFF;
}

body, html {
  margin: 0;
  padding: 0;
}

/* Button */
button {
  background-color: #DC4131;
  color: #FFFFFF;
  border: none;
  font-size: 16px;
  height: 18px;
  border-radius: 8px;
  display: inline-flex;
  padding: 10px 16px;
  margin-top: 45px;
  align-items: center;
  justify-content: center;
  width: 320px;
  height: 44px;
  margin-bottom: 90px;
}

button:hover {
  background-color: #AE2E21 ; /* Darker red */
  color: white;
}

/* Header */
header {
  top: 0;
  left: 0px;
  right: 0px;
  height: 68px;
  background-color: #F7F2DE;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom: solid 1px #000000;
} 

header p {
  text-align: center;
  justify-content: center;
  font-weight: 200px;
}

/* Navigation */
#nav-container {
  font-family: "Arimo", sans-serif;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

ul {
  list-style: none;
  padding: 0;
}

nav ul {
  display: flex;
  gap: 60px;
}

nav ul li {
  display: inline;
}

.hero {
  background-image: url('markus-spiske-WcLzVLbUP5g-unsplash-web.jpg');
  background-size: cover;
  background-position: center;
  height: 100vh;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  position: relative;
}

.hero .divider {
  width: 1px;
  height: 208px;
  background-color: white;
  margin: 20px 0;
}

.hero h1 {
  margin: 0;
}

.hero p {
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: white;
}

/* Typography */
h1 {
  font-family: 'Frank Ruhl Libre';
  font-size: 200px;
  font-weight: 200;
  color: #FFFFFF;
}

h2 {
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  font-weight: 200;
  margin-top: 90px;
  margin-bottom: 8px;
  color: #0B0A08;
}

h3 {
  font-family: 'Frank Ruhl Libre';
  font-size: 48px;
  font-weight: 200;
  color: #FFFFFF;
}

h4 {
  font-family: "Arimo", sans-serif;
  font-size: 20px;
  font-weight: 200;
  color: #0B0A08;
}

p {
  font-family: 'Frank Ruhl Libre';
  font-weight: 200;
  font-size: 20px;
  color: #0B0A08;
}

/* Section 1 - Landscape */
#landscape h1 {
  text-align: center;
  color: #FFFFFF;
}

.vl {
  border-left: 2px solid #FFFFFF;
  height: 208px;
  position: absolute;
  left: 50%;
  margin-left: -3px;
  top: 50%;
}

#landscape h2 {
  text-align: center;
  color: #FFFFFF;
  width: 416px;
  justify-content: center;
}


/* Section 2 - Shop-Ask */
#shop-ask {
  background-color: #FFFFFF;
  text-align: center;
}

#shop-ask ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
}

#shop-ask ul li {
  width: 49%;
}

#shop-ask img {
  max-width: 100%;
  border-radius: 16px;
  margin-top: 45px;
  margin-bottom: 45px;
  width: 448px;
  height: 327px;
}

#shop-ask p {
  width: 407px;
  margin: 0 auto;
}

/* Section 3 - This is how it works */
.container {
  display: flex;
  margin: 0 auto;
  padding: 0px 45px;
  background-color: #F7F2DE;
  border-bottom: solid 1px #000000;
  border-top: solid 1px #000000;
  height: 785px;
}

.left-panel {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  width: 489px;
}

.right-panel {
  flex: 2;
  display: flex;
  flex-direction: column;
  gap: 40px;
  margin-left: 90px;
  border-left: solid 1px #000000;
}

.step {
  display: flex;
  gap: 20px;
  align-items: center;
  height: 197px;
}

.step-title {
  width: 278px;
  font-family: "Arimo", sans-serif;
  flex-shrink: 0;
  padding-left: 90px;
}

.step-content {
  font-family: "Arimo", sans-serif;
  max-width: 414px;
  flex: 1;
}

a {
  color: #000000;
  text-decoration: underline;
}


/* Section 4 - Popular produce*/
#popular {
  background-color: #FFFFFF;
  margin-left: 45px;
  margin-right:45px;
}

#popular ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  gap: 29px;
}

#popular img {
  max-width: 100%;
  border-radius: 16px;
  width: 454px;
  height: 432px;
}

#popular h2 {
  padding-bottom: 45px;
}

#popular p {
  font-family: "Arimo", sans-serif;
  font-size: 24px;
  margin-top: 18px;
  margin-bottom: 10px;
}

#popular button {
  width: 152px;
  height: 40px;
  background-color: black;
  color: white;
  font-size: 16px;
  padding: 10px 16px;
  border: none;
  border-radius: 44px;
  cursor: pointer;
  margin-bottom: 30px;
  margin-top: 10px;
}
  

/* Footer */
footer {
  color: #FFFFFF;
  background-color: #DC4131;
  height: 650px;
}

footer h3 {
  font-weight: 200;
}

h3.border-bottom {
  padding-bottom: 32px;
  padding-top: 45px;
  border-bottom: solid 1px #FFFFFF;
  margin-top: 32px;
  margin-bottom: 45px;
  margin-left: 45px;
  margin-right: 45px;
}

footer h2 {
  font-family: "Arimo", sans-serif;
  font-size: 36px;
  margin-left: 45px;
  color: #FFFFFF;
}

footer p {
  color: #FFFFFF;
  font-family: 'Frank Ruhl Libre';
  font-size: 24px;
  font-weight: 200;
  margin-left: 45px;
  margin-bottom: 45px;
  max-width: 407px;
}

/* Contact form */
input,
textarea,
select {
  width: 460px;
  height: 44px;
  background-color: #FFFFFF;
  color:#0B0A08;
  font-family: "Arimo", sans-serif;
  font-weight: 200;
  font-size: 16px;
  padding: 16px;
  border: none;
  border-radius: 8px;
  outline: none;
  box-sizing: border-box;
  appearance: none;
  -webkit-appearance: none;
}

input:focus {
  outline: 4px solid pink;
  outline-offset: 2px;
}
  
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

form {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-left: 45px;
  margin-bottom: 45px;
  max-width: 460px;
}


footer button {
  background-color: #e1eaf0;
  color:#0B0A08;
  font-family: "Arimo", sans-serif;
  font-weight: 300;
  font-size: 16px;
  border: none;
  border-radius: 8px;
  display: inline-flex;
  padding: 10px 16px;
  margin-top: 12px;
  align-items: center;
  width: 459px;
  height: 44px;
}

/* MEDIA SCREEN - INDEX.HTML AND PRODUCT.HTML */

@media screen and (max-width: 700px){
nav {
  margin-top: 10px;
  padding-bottom: 30px;
  }

  nav ul {
  gap: 20px;
}

header p {
  margin-top: 10px;
  font-size: 32px;
  font-weight: 200px;
}

/* Typography */
h1 {
  font-family: 'Frank Ruhl Libre';
  font-size: 75px;
  font-weight: 200;
  color: #FFFFFF;
}

h2 {
  font-family: "Arimo", sans-serif;
  font-size: 24px;
  font-weight: 200;
  margin-top: 90px;
  margin-bottom: 8px;
  color: #0B0A08;
}

p {
  font-family: 'Frank Ruhl Libre';
  font-weight: 200;
  font-size: 16px;
  color: #0B0A08;
}

.hero p {
  font-family: "Arimo", sans-serif;
  font-size: 24px;
  letter-spacing: 1px;
  text-transform: lowercase;
  color: white;
}

#shop-ask ul {
  display: flex;
  flex-wrap: column;
  justify-content: center;
  width: 100%;
}

#shop-ask ul li {
  width: 100%;
}

#shop-ask img {
  margin-top: 44px;
  margin-bottom: 44px;
  margin-left: 16px;
  width: 359px;
  height: 250px;
}

#shop-ask p {
  width: 307px;
  margin: 0 auto;
}

.container {
  flex-direction: column;
  padding: 20px;
  height: auto;
}

.left-panel {
  width: 100%;
  margin-left: 0px;
  margin-bottom: 45px;
  border-left: none;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.right-panel {
  width: 100%;
  margin-left: 0px;
  border-left: none;
}

.step {
  flex-direction: column;
  height: auto;
  align-items: flex-start;
}

.step-title {
  width: 300px;
  width: 100%;
  padding-left: 45px;
}

.step-title h2 {
  font-size: 18px;
}

.step-content {
  max-width: 300px;
  padding-left: 45px;
  padding-bottom: 90px;
}

#popular {
  margin-right: 0px;
}

#popular ul {
  display: flex;
  flex-wrap: nowrap;
  overflow: hidden;
  gap: 30px;
}

#popular img {
  min-width: 250px;
  height: 321px;
}

#popular ul li p {
  font-size: 20px;
  padding-bottom: 10px;
}

footer h2 {
  font-family: "Arimo", sans-serif;
  font-size: 24px;

}

h3.border-bottom {
  padding-bottom: 32px;
  padding-top: 32px;
}

footer p {
  font-size: 16px;
  max-width: 279px;
}

form {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin-left: 45px;
  margin-bottom: 45px;
  width: 329px;
}

/* Contact form */
input,
textarea,
select {
  width: 329px;
}

footer button {
  width: 329px;
}

}

/* PRODUCT PAGE - PRODUCT.HTML */
/* Section 1 - Produce */

#produce {
  margin-left: 45px;
  margin-right: 45px;
}

#produce ul {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  width: 100%;
  gap: 29px;
}

#produce ul li {
  width: 30%;
}

#produce img {
  max-width: 100%;
  border-radius: 16px;
  width: 454px;
  height: 432px;
}
  
#produce h2 {
  margin-top: 90px;
  margin-bottom: 30px;
}
  
#produce p {
  font-family: "Arimo", sans-serif;
  font-size: 20px;
  margin-top: 0px;
  margin-bottom: 45px;
  width: 591px;
}

#produce button {
  width: 152px;
  height: 40px;
  background-color: black;
  color: white;
  font-size: 16px;
  padding: 10px 16px;
  border: none;
  border-radius: 44px;
  cursor: pointer;
  margin-bottom: 30px;
  margin-top: 0px;
}

/* Section 2 - Partners, Map*/
.container-product {
  display: flex;
  margin: 0;
  padding-left: 45px; 
  padding-right: 45px;
  background-color: #F7F2DE;
  border-top: solid 1px #000000;
  height: 658px;
}

.left-panel-product {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 658px;
}

.right-panel-product {
  flex: 2;
  display: flex;
  flex-direction: column;
  margin-left: 90px;
  border-left: solid 1px #000000;
  height: 658px;
  width: 1009px;
}

#partners img {
  width: 745px;
  height: 478px;
  margin: 90px 90px; 
}

